--- a/src/style.css
+++ b/src/style.css
@@ -73,11 +73,45 @@
   font-size: 36px;
 }
 
+
+
 .main-content {
   position: relative;
   flex: 1;
   padding: 10px;
 }
+
+.task-card-container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 10px;
+}
+
+.task-card {
+  display: flex;
+  gap: 20px;
+  padding: 10px;
+  border: 1px solid black;
+}
+
+.card-delete-btn {
+  color: red;
+  background-color: white;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+}
+
+.card-delete-btn:hover {
+  background-color: rgb(255, 120, 120);
+}
+
+.card-info {
+  flex: 1;
+}
+
+
 
 .add-btns {
   display: flex;
@@ -95,6 +129,11 @@
   border: 1px solid black;
   border-radius: 50%;
   background-color: white;
+  cursor: pointer;
+}
+
+.add-btns button:hover {
+  background-color:azure;
 }
 
 .footer {
