--- a/src/style.css
+++ b/src/style.css
@@ -15,6 +15,7 @@
 }
 
 .topper {
+  position: relative;
   display: flex;
   flex: 1;
 }
@@ -75,9 +76,11 @@
 
 
 
-.main-content {
-  position: relative;
+.list-container {
   flex: 1;
+}
+
+.all-list {
   padding: 10px;
 }
 
@@ -153,7 +156,7 @@
   position: absolute;
   top: 40%;
   left: 40%;
-  background-color: lightgray;
+  background-color: azure;
   width: 300px;
   height: 200px;
   visibility: hidden;
