Switching between 'All' and 'Starred' tabs possible

--- a/src/style.css
+++ b/src/style.css
@@ -49,6 +49,14 @@
   padding: 10px;
 }
 
+.sidebar-tasks-tab {
+  cursor: pointer;
+}
+
+.sidebar-tasks-tab:hover {
+  background-color: azure;
+}
+
 .sidebar-lists {
   display: flex;
   flex-direction: column;
@@ -80,7 +88,7 @@
   flex: 1;
 }
 
-.all-list {
+.list {
   padding: 10px;
 }
 
@@ -116,7 +124,7 @@
 
 
 
-.add-btns {
+.add-btns-container {
   display: flex;
   gap: 40px;
   position: absolute;
@@ -125,7 +133,7 @@
   padding: 20px;
 }
 
-.add-btns button {
+.add-task-btn, .add-list-btn {
   font-size: 24px;
   height: 100px;
   width: 100px;
@@ -135,7 +143,7 @@
   cursor: pointer;
 }
 
-.add-btns button:hover {
+.add-task-btn:hover, .add-list-btn:hover {
   background-color:azure;
 }
 
